--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
-}
+@font-face {
+    font-family: "Roboto"; 
+    src: url("./data/fonts/Roboto/Roboto-Light.ttf") format("truetype"); 
+    font-style: normal; 
+    font-weight: normal; 
+  } 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  @font-face {
+    font-family: "Roboto-Bold"; 
+    src: url("./data/fonts/Roboto/Roboto-Bold.ttf") format("truetype"); 
+    font-style: bold; 
+  } 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  @font-face {
+    font-family: "Roboto-Thin"; 
+    src: url("./data/fonts/Roboto/Roboto-Thin.ttf") format("truetype"); 
+    font-style: thin; 
+  } 
+
+  @font-face {
+    font-family: "Roboto-ThinItalic"; 
+    src: url("./data/fonts/Roboto/Roboto-ThinItalic.ttf") format("truetype"); 
+    font-style: italic; 
+  } 
+
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Roboto";
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .App {
+    width: 1920px;
+    padding-bottom: 10px;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
